tests/ui/coverage-attr/allowed-positions.stderr
error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/allowed-positions.rs:11:1
   |
LL |   #[coverage(off)]
   |   ^^^^^^^^^^^^^^^^
LL | / trait Trait {
LL | |     #[coverage(off)]
LL | |     const X: u32;
...  |
LL | |     fn g();
LL | | }
   | |_- not a function or closure

error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/allowed-positions.rs:52:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
LL |     let _ = ();
   |     ----------- not a function or closure

error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/allowed-positions.rs:56:9
   |
LL |         #[coverage(off)]
   |         ^^^^^^^^^^^^^^^^
LL |         () => (),
   |         -------- not a function or closure

error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/allowed-positions.rs:60:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
LL |     return ();
   |     --------- not a function or closure

error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/allowed-positions.rs:13:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
LL |     const X: u32;
   |     ------------- not a function or closure

error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/allowed-positions.rs:16:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
LL |     type T;
   |     ------- not a function or closure

error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/allowed-positions.rs:21:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
LL |     fn f(&self);
   |     ------------ not a function or closure

error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/allowed-positions.rs:24:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
LL |     fn g();
   |     ------- not a function or closure

error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/allowed-positions.rs:32:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
LL |     type T = Self;
   |     -------------- not a function or closure

error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/allowed-positions.rs:35:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
LL |     type U = impl Trait;
   |     -------------------- not a function or closure

error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/allowed-positions.rs:43:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
LL |     static X: u32;
   |     -------------- not a function or closure

error[E0788]: attribute should be applied to a function definition or closure
  --> $DIR/allowed-positions.rs:46:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
LL |     type T;
   |     ------- not a function or closure

error: unconstrained opaque type
  --> $DIR/allowed-positions.rs:36:14
   |
LL |     type U = impl Trait;
   |              ^^^^^^^^^^
   |
   = note: `U` must be used in combination with a concrete type within the same impl

error: aborting due to 13 previous errors

For more information about this error, try `rustc --explain E0788`.
